2013-04-05  Peter Bloomfield

	* libbalsa/html.c (lbh_context_menu_cb), (libbalsa_html_new):
	catch WebKit's "context-menu" signal, and emit "popup-menu" on
	the parent widget instead.
	* src/balsa-mime-widget-text.c (balsa_gtk_html_popup): do not
	unref the popup menu.

2013-04-04  Peter Bloomfield

	* libbalsa/html.c (lbh_info_bar_response_cb): no need to reload;
	(lbh_resource_load_started_cb): no need for cache;
	(lbh_cid_cb), (libbalsa_html_new): register the "cid:" protocol
	handler only once, to avoid crashing the web process.

2013-04-04  Peter Bloomfield

	Handle "cid:" protocol for images

	* libbalsa/html.c (lbh_info_bar_response_cb), (lbh_info_bar):
	simplify info-bar code.
	(lbh_resource_load_started_cb), (lbh_cid_cb),
	(libbalsa_html_new): set up a handler for "cid:" protocol.

2013-04-03  Peter Bloomfield

	* libbalsa/filter-funcs.c (append_header_names),
	(append_flag_names): do not mark text-free string for
	translation.
	* libbalsa/imap-server.c (is_info_cb): ditto.

2013-04-02  Peter Bloomfield

	* libbalsa/html.c (lbh_get_body_content_utf8): sanitize UTF-8
	text.

2013-03-31  Peter Bloomfield

	Do not leak search-text

	* libbalsa/html.c (lbh_webkit_info_free), (libbalsa_html_new),
	(lbh_search_failed_to_find_text_cb), (lbh_search_found_text_cb),
	(lbh_search_init), (lbh_search_continue), (libbalsa_html_search):
	move search info to LibBalsaWebKitInfo, and free search-text in
	the GDestroyNotify function.

2013-03-30  Peter Bloomfield

	Refactor HTML search code to work with asynchronous search in
	Webkit2.

	* libbalsa/html.c (lbh_web_process_crashed_cb): spew message
	only when debugging;
	(lbh_search_failed_to_find_text_cb), (lbh_search_found_text_cb),
	(lbh_search_init), (lbh_search_continue),
	(libbalsa_html_search): work with asynchronous search;
	(libbalsa_html_get_selection_bounds): is now gboolean, return
	FALSE in Webkit2 version.
	* libbalsa/html.h: new protoypes.
	* src/balsa-message.c (bm_find_cb), (bm_find_entry_changed_cb),